--- a/Thesis/1-Introduction.tex
+++ b/Thesis/1-Introduction.tex
@@ -1,41 +1,42 @@
-\chapter{Type IIA generalities}
+\chapter{Generalities of type IIA string theory}
 
-The are six main types of strings theories: a bosonic string theory and five supersymmetric 
-string theories, the latter include both bosons and fermions.
+%The are six main types of strings theories: a bosonic string theory and five supersymmetric 
+%string theories, the latter include both bosons and fermions.
 %While the bosonic string theory can be formulated solely using closed strings, superstring theories
 %require closed and open strings.
 In this thesis we will only work with the supersymmetric type IIA theory. 
+The study of string theory in Minkowski spacetime has lead to the identification of five consistent string theories, which all turn out to be supersymmetric and give rise to massless bosonic and fermionic excitations in their spectrum. The five string theories were given their name according to their own specificities: Type heterotic HE and HO, Type I, Type IIB and Type IIA string theory. In this thesis we will only concentrate on the last one in the list. 
 
-\subsection{TIIA spectrum}
+\subsection{Type IIA spectrum}
 Type IIA string theory requires ten space-time dimensions to be consistent.
 Furthermore, it has a 10-dimensional supersymmetry with 32 supercharges, which corresponds to $\mathcal N=(1,1)$.
 The flat 10-dimensional space-time bosonic spectrum of type IIA can be classified according to
 the boundary conditions of the strings, whether we consider Ramond (R) or Neveu–Schwarz (NS) conditions.
-In the NS-NS sector, we have the dilaton $\phi$, a two-form $B_2$ and a graviton $G_{\mu\nu}$,
-while in the R-R sector we have the 1- and 3-forms $c_1, c_3$.
+We list only the massless (closed) string states.
+In the NS-NS sector, we find the dilaton $\phi$, a two-form $B_2$ and a graviton $G_{\mu\nu}$,
+while in the R-R sector we identify the 1- and 3-forms $c_1, c_3$.
 The fermions, which belong to the NS-R and R-NS sectors, are two opposite-chirality gravitinos $\psi$ and two opposite-chirality dilatinos $\lambda$.
-%This is the perturbative spectrum around the vacuum, which is made of closed strings only. 
+
+\subsection{Type IIA SUGRA}
 
 \subsection{The D-brane}
 
-A generalization of strings are D$p$-branes, which are $p$-dimensional extended objects.
-Thus, a D$1$-brane would correspond to a string, a D$2$-brane would be a membrane and so on.
+The two-dimensional strings can be generalized to $(p+1)$-dimensional extended object, which are called D$p$-branes.
+Thus, a D$1$-brane would correspond to a D-string, a D$2$-brane would be a three-dimensional membrane and so on.
 The existence of D$p$-branes can be motivated, in the weak coupling limit, as 
 objects where open strings end, so they are a way to impose Dirichlet boundary conditions on open strings.
-In fact, D-branes should be though as new non-perturbative states in their own right.
-\todoin{Might remove last line. More subtle than this. In perturbative regime branes are fully described in terms of strings. f-strings, T and S dualities 
-lead to a more democratic formulation in non-perturbative regime.}
+In type IIA string theory, only even-dimensional D$p$-branes are physical, which are: the D$0$, D$2$, D$4$, D$6$ and D$8$-branes.
 
-We can study the dynamics of a D$p$-branes in terms of the dynamics of open strings with endpoints
+We can study the dynamics of a D$p$-branes in terms of the open string excitations  with endpoints
 attached to the D$p$-brane.
 Let us consider the open string excitations of a D$p$-brane, the latter spanning $p+1$ dimensions and transverse to $d-p-1$ dimensions.
 The presence of the D$p$-brane breaks the ten-dimensional Poincaré invariance of the theory, because
-particles propagate on the $(p+1)$-dimensional volume of the D$p$-brane only.
+open string excitations propagate on the $(p+1)$-dimensional volume of the D$p$-brane only.
 This implies that massless particles must transform under irreducible representations of $SO(p-2)$, instead of
 $SO(d-2)$.
 The massless spectrum in $(p+1)$ dimensions of the open string theory is composed by a gauge boson $A^\mu$ ($\mu=0,\ldots,p$) (corresponding
-to transverse oscillations to the brane),
-$9-p$ real scalars $\phi^i$ (corresponding to longitudinal oscillations to the brane) and some fermions $\lambda_a$.
+to longitudinal oscillations to the brane),
+$9-p$ real scalars $\phi^i$ (corresponding to transverse oscillations to the brane) and some fermions $\lambda_a$.
 This particle content can be arranged into a vector supermultiplet of $U(1)$ with $16$ supersymmetries
 in $(p+1)$ dimensions. 
 Thus, a D$p$-brane reduces the degree of supersymmetry of the type IIA theory by half.
@@ -45,7 +46,7 @@ $(p+1)$-dimensional effective action of the massless open string excitations of 
 As an illustration of this, a D$p$-brane breaks the translational symmetry of the vacuum, which allows
 us to conclude that the $\phi^i$ scalar fields are the Goldstone bosons associated to the broken symmetry. 
 The vev of these scalar fields determine the position of the D$p$-brane in the transverse space, and the fluctuations of the scalar
-fields determine the evolution of the D$p$-brane wordlvolume $W_{p+1}$ (the worldline of a particle generalization to the case of branes). 
+fields determine the evolution of the D$p$-brane worldvolume $W_{p+1}$ (the generalization of the particle worldline to the case of higher-dimensional branes). 
 The resulting action of the bosonic sector of the D$p$-brane is the sum of a Dirac-Born-Infeld term $S_{DBI}$ and a Chern-Simons term $S_{CS}$.
 
 The DBI term carries the information of how a D$p$-brane interacts with the NSNS fields. 
