--- a/Thesis/3-Project.tex
+++ b/Thesis/3-Project.tex
@@ -41,12 +41,12 @@ As an example, we take as deformation $-5\phi z_1 z_2 z_3 z_4 z_5$
 In order to determine the geometry near the singularity, we make the following change of 
 variables
 \begin{equation}
-  \begin{align}
+  \begin{aligned}
   x_1 &= 1 + y_1/\sqrt{10} + y_2/5 + y_4/\sqrt{50}\\
   x_2 &= 1 + y_1/\sqrt{10} - y_2/5 + y_4/\sqrt{50}\\
   x_3 &= 1 + y_1/\sqrt{10} + y_3/5 - y_4/\sqrt{50}\\
   x_4 &= 1 + y_1/\sqrt{10} - y_3/5 - y_4/\sqrt{50}
-  \end{align}
+  \end{aligned}
 \end{equation}
 
 In these coordinates, the quintic becomes
