--- a/Thesis/main.tex
+++ b/Thesis/main.tex
@@ -1,4 +1,4 @@
-\documentclass[secnumarabic,nobalancelastpage,10pt,nofootinbib,a4paper]{memoir}
+\documentclass[secnumarabic,10pt,nobalancelastpage,nofootinbib,a4paper]{memoir}
 %\documentclass[aps,secnumarabic,nobalancelastpage,amsmath,amssymb,
 %nofootinbib]{revtex4}
 
@@ -83,9 +83,9 @@
 
 \include{1-Introduction}
 
-%\include{2-Developement}
+\include{2-Developement}
 %
-%\include{3-Project}
+\include{3-Project}
 %
 %\include{4-Conclusion}
 
