--- a/Thesis/main.tex
+++ b/Thesis/main.tex
@@ -79,14 +79,14 @@
 
 \renewcommand{\baselinestretch}{1.50}\normalsize
 
-\include{0-Abstract}
+%\include{0-Abstract}
 
-\include{1-Introduction}
+%\include{1-Introduction}
 
 \include{2-Developement}
-%
-\include{3-Project}
-%
+
+%\include{3-Project}
+
 %\include{4-Conclusion}
 
 \bibliographystyle{babunsrt}
