--- a/Thesis/mybib.bib
+++ b/Thesis/mybib.bib
@@ -100,3 +100,24 @@ title = {{An exactly soluble superconformal theory from a mirror pair of Calabi-
 volume = {258},
 year = {1991}
 }
+
+
+@article{Grana2006,
+abstract = {We present a pedagogical overview of flux compactifications in string theory, from the basic ideas to the most recent developments. We concentrate on closed-string fluxes in type-II theories. We start by reviewing the supersymmetric flux configurations with maximally symmetric four-dimensional spaces. We then discuss the no-go theorems (and their evasion) for compactifications with fluxes. We analyze the resulting four-dimensional effective theories, as well as some of its perturbative and non-perturbative corrections, focusing on moduli stabilization. Finally, we briefly review statistical studies of flux backgrounds. {\textcopyright} 2005 Published by Elsevier B.V.},
+annote = {TIIA SUGRA basics},
+archivePrefix = {arXiv},
+arxivId = {hep-th/0509003},
+author = {Gra{\~{n}}a, Mariana},
+doi = {10.1016/j.physrep.2005.10.008},
+eprint = {0509003},
+file = {:home/jinawee/Documents/Clase/TFM/Papers/0509003.pdf:pdf},
+issn = {03701573},
+journal = {Physics Reports},
+mendeley-groups = {TFM},
+number = {3},
+pages = {91--158},
+primaryClass = {hep-th},
+title = {{Flux compactifications in string theory: A comprehensive review}},
+volume = {423},
+year = {2006}
+}
