modified:   1-Introduction.tex 	modified:   2-Developement.tex 	deleted:    5-Conclusion.tex 	modified:   main.pdf 	modified:   main.tex

--- a/Thesis/1-Introduction.tex
+++ b/Thesis/1-Introduction.tex
@@ -12,12 +12,18 @@ Type IIA string theory requires ten space-time dimensions to be consistent.
 Furthermore, it has a 10-dimensional supersymmetry with 32 supercharges, which corresponds to $\mathcal N=(1,1)$.
 The flat 10-dimensional space-time bosonic spectrum of type IIA can be classified according to
 the boundary conditions of the strings, whether we consider Ramond (R) or Neveu–Schwarz (NS) conditions.
-We list only the massless (closed) string states.
+There would be an infinite tower of massive string states, but restrict the discussion to the massless states only.
 In the NS-NS sector, we find the dilaton $\phi$, a two-form $B_2$ and a graviton $G_{\mu\nu}$,
 while in the R-R sector we identify the 1- and 3-forms $c_1, c_3$.
 The fermions, which belong to the NS-R and R-NS sectors, are two opposite-chirality gravitinos $\psi$ and two opposite-chirality dilatinos $\lambda$.
 
 \subsection{Type IIA SUGRA}
+ 
+The low-energy theory of the ten-dimensional type IIA string theory is type IIA SUGRA.
+The spectrum of Type IIA SUGRA has as elementary fermions, which belong to the massless spectrum (NS-R and R-NS) of type IIA theory,
+two Majorana-Weyl gravitinos of the same chirality $\psi_M^a$ and two dilatinos $\lambda^a$. 
+\todoin{Action}
+
 
 \subsection{The D-brane}
 
@@ -127,21 +133,4 @@ If some of the angles vanish, the supersymmetry would we enhanced.
 
 The reason we have used D6-branes and no other dimension of D$p$-branes is that they would not lead to chiral fermions in 4 dimensions.
 Intuitively, two D6-branes allow to define an orientation in the transverse 6-dimensional space, which would not be possible
-with two other type of D$p$-branes in type IIA string theory
-\todoin{So have we seen that no Calabi-Yau is needed to obtain 4d chiral fermions if we consider a theory with intersecting 
-D6-branes? Of course, we still would have to cancel RR charges in some way.}
-
-\todoin{Add tadpole cancellation here?}
-
-%\todoin{RR-sector -> RR-tadpole cancellation?}
-%
-%D6-branes acts as RR sources so 
-%Cancellation of RR-tadpoles imply that the 4d effective theory is anomaly free.
-
-
-\subsection{SUGRA}
- 
-The low-energy theory of the ten-dimensional type IIA string theory is type IIA SUGRA.
-The spectrum of Type IIA SUGRA has as elementary fermions, which belong to the massless spectrum (NS-R and R-NS) of type IIA theory,
-two Majorana-Weyl gravitinos of the same chirality $\psi_M^a$ and two dilatinos $\lambda^a$. 
-\todoin{Isn't the spectrum the same as the high-energy TIIA? Might not need to mention SUGRA here then.}
+with two other type of D$p$-branes in type IIA string theory.
