--- a/Thesis/main.tex
+++ b/Thesis/main.tex
@@ -69,7 +69,7 @@
 
 %\listoftodos
 
-%\include{title}
+\include{title}
 
 \frontmatter
 
@@ -81,7 +81,7 @@
 
 %\include{0-Abstract}
 
-%\include{1-Introduction}
+\include{1-Introduction}
 
 \include{2-Developement}
 
@@ -91,6 +91,5 @@
 
 \bibliographystyle{babunsrt}
 \bibliography{mybib}
-How should I cite?
 
 \end{document}
