--- a/Thesis/3-Project.tex
+++ b/Thesis/3-Project.tex
@@ -1,6 +1,6 @@
 \chapter{Type IIA on the quintic}
 
-\section{Quintic threefold motivation}
+\section{Motivation}
 
 \todoin{Why the quintic?}
 
@@ -8,11 +8,21 @@
 
 \section{sLags on Fermat's quintic}
 
+\subsection{Definition}
+
+\subsection{Construction of sLags}
+
+\subsection{Moduli space of sLags}
+
+\subsection{Intersection numbers}
+
+\subsection{Volumes}
+
 \subsection{SM on the quintic}
 
 \section{sLags on the deformed quintic}
 
-\subsection{Quintic deformations}
+\subsection{Deformations of the quintic. Classification.}
 The consider the possible deformations of Fermat's quintic.
 There should be $101$ independent deformations, since they correspond to different complex 
 structures and are given be the Hodge number $h_{21}=101$.
@@ -23,14 +33,12 @@ We can add terms of the following type to the quintic
   x_i^5, x_i^4 x_j^1, x_i^3 x_j^2, x_i^3 x_j x_k, x_i^2 x_j x_k x_l, x_1 x_2 x_3 x_4 x_5
 \end{equation}
 
-Not all of these terms are independent, since a coordinate redefiniton $GL(5,\mathbb C)$.
+Not all of these terms are independent, since a coordinate redefinition $GL(5,\mathbb C)$.
 
 \todoin{Deformation classification}
 
 \todoin{Coordinate redefinition freedom}
 
-
-\subsection{Singularities}
 
 As an example, we take as deformation $-5\phi z_1 z_2 z_3 z_4 z_5$
 
