--- a/Thesis/main.tex
+++ b/Thesis/main.tex
@@ -58,6 +58,7 @@
 
 \usepackage{wrapfig}
 \usepackage{slashed}
+\usepackage{youngtab}
 
 %Default inline comments
 \newcommand{\todoin}[2][]{\todo[inline,#1]{#2}}
@@ -85,7 +86,7 @@
 
 \include{2-Developement}
 
-%\include{3-Project}
+\include{3-Project}
 
 %\include{4-Conclusion}
 
