--- a/Thesis/mybib.bib
+++ b/Thesis/mybib.bib
@@ -121,3 +121,130 @@ title = {{Flux compactifications in string theory: A comprehensive review}},
 volume = {423},
 year = {2006}
 }
+
+
+
+ %\cite{McLean:1996} 
+\bibitem{McLean:1996}
+R.~C.~McLean,
+%``Deformations of calibrated submanifolds,"
+Commun. Analy. Geom (1996)
+
+
+%\cite{Strominger:1996it}
+\bibitem{Strominger:1996it}
+  A.~Strominger, S.~T.~Yau and E.~Zaslow,
+  %``Mirror symmetry is T duality,''
+  Nucl.\ Phys.\ B {\bf 479} (1996) 243
+  doi:10.1016/0550-3213(96)00434-8
+  [hep-th/9606040].
+
+%\cite{Kontsevich:1994dn}
+\bibitem{Kontsevich:1994dn}
+  M.~Kontsevich,
+  %``Homological Algebra of Mirror Symmetry,''
+  alg-geom/9411018.
+
+%\cite{Ibanez:2012zz}
+\bibitem{Ibanez:2012zz}
+  L.~E.~Ibanez and A.~M.~Uranga,
+  %``String theory and particle physics: An introduction to string phenomenology,''
+  Cambridge, UK: Univ. Pr. (2012) 673 p
+
+
+%\cite{Blumenhagen:2005mu}
+\bibitem{Blumenhagen:2005mu}
+  R.~Blumenhagen, M.~Cvetic, P.~Langacker and G.~Shiu,
+  %``Toward realistic intersecting D-brane models,''
+  Ann.\ Rev.\ Nucl.\ Part.\ Sci.\  {\bf 55} (2005) 71
+  doi:10.1146/annurev.nucl.55.090704.151541
+  [hep-th/0502005].
+  %%CITATION = doi:10.1146/annurev.nucl.55.090704.151541;%%
+
+  %\cite{Bouchard:2007ik}
+\bibitem{Bouchard:2007ik}
+  V.~Bouchard,
+  %``Lectures on complex geometry, Calabi-Yau manifolds and toric geometry,''
+  hep-th/0702063 [HEP-TH].
+
+
+
+%\cite{Joyce:2001xt}
+\bibitem{Joyce:2001xt}
+  D.~Joyce,
+  %``Lectures on Calabi-Yau and special Lagrangian geometry,''
+  math/0108088 [math-dg].
+  %%CITATION = MATH/0108088;%%
+
+%\cite{Joyce:2001nm}
+\bibitem{Joyce:2001nm}
+  D.~Joyce,
+  %``Lectures on special Lagrangian geometry,''
+  math/0111111 [math-dg].
+  %%CITATION = MATH/0111111;%%
+  
+%\cite{Becker:1995kb}
+\bibitem{Becker:1995kb}
+  K.~Becker, M.~Becker and A.~Strominger,
+  %``Five-branes, membranes and nonperturbative string theory,''
+  Nucl.\ Phys.\ B {\bf 456} (1995) 130
+  doi:10.1016/0550-3213(95)00487-1
+  [hep-th/9507158].  
+  
+  
+  %\cite{Brunner:1999jq}
+\bibitem{Brunner:1999jq}
+  I.~Brunner, M.~R.~Douglas, A.~E.~Lawrence and C.~Romelsberger,
+  %``D-branes on the quintic,''
+  JHEP {\bf 0008} (2000) 015
+  doi:10.1088/1126-6708/2000/08/015
+  [hep-th/9906200].  
+  
+  %\cite{Blumenhagen:2002wn}
+\bibitem{Blumenhagen:2002wn}
+  R.~Blumenhagen, V.~Braun, B.~Kors and D.~Lust,
+  %``Orientifolds of K3 and Calabi-Yau manifolds with intersecting D-branes,''
+  JHEP {\bf 0207} (2002) 026
+  doi:10.1088/1126-6708/2002/07/026
+  [hep-th/0206038].
+  
+
+%\cite{Blumenhagen:2002vp}
+\bibitem{Blumenhagen:2002vp}
+  R.~Blumenhagen, V.~Braun, B.~Kors and D.~Lust,
+  %``The standard model on the quintic,''
+  hep-th/0210083.
+  
+  %\cite{Candelas:1987is}
+\bibitem{Candelas:1987is}
+  P.~Candelas,
+  ``Lectures On Complex Manifolds,''
+  
+  
+  
+  %\cite{Partouche:2000uq}
+\bibitem{Partouche:2000uq}
+  H.~Partouche and B.~Pioline,
+  %``Rolling among G(2) vacua,''
+  JHEP {\bf 0103} (2001) 005
+  doi:10.1088/1126-6708/2001/03/005
+  [hep-th/0011130].
+  
+  
+%\cite{Witten:1993yc}
+\bibitem{Witten:1993yc}
+  E.~Witten,
+  %``Phases of N=2 theories in two-dimensions,''
+  Nucl.\ Phys.\ B {\bf 403} (1993) 159
+   [AMS/IP Stud.\ Adv.\ Math.\  {\bf 1} (1996) 143]
+  doi:10.1016/0550-3213(93)90033-L
+  [hep-th/9301042].  
+  
+  
+  %\cite{Candelas:1990rm}
+\bibitem{Candelas:1990rm}
+  P.~Candelas, X.~C.~De La Ossa, P.~S.~Green and L.~Parkes,
+  %``A Pair of Calabi-Yau manifolds as an exactly soluble superconformal theory,''
+  Nucl.\ Phys.\ B {\bf 359} (1991) 21
+   [AMS/IP Stud.\ Adv.\ Math.\  {\bf 9} (1998) 31].
+  doi:10.1016/0550-3213(91)90292-6
